# archy

./: .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Makefile  README.md  pyproject.toml
archy/: __init__.py  api.py  counterfactuals.py  do_calculus.py  graph.py  interventions.py
backend/: __init__.py  api.py  counterfactuals.py  do_calculus.py  interventions.py  rendering.py
backend/cli/: __init__.py  main.py
backend/tutorial/: __init__.py  content.py  engine.py  models.py  renderer.py
examples/: basic_usage.py
ideas/: personal_finance_causal_model.md  reasoning_engine.md
