[project]
name = "archy"
version = "0.1.5.dev3"
description = "Backend toolkit for causal AI: do-calculus, counterfactuals, and interventions"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "networkx",
    "numpy",
    "pandas",
    "scipy",
    "pydantic",
    "click>=8.1.0,<8.2.2",
    "rich>=14.2.0",
]

[dependency-groups]
dev = [
    "pytest",
    "mypy",
    "ruff",
    "types-networkx>=3.6.1.20251220",
    "pre-commit>=4.5.1",
    "bump-my-version>=1.2.2",
]

[project.scripts]
archy = "backend.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.bumpversion]
current_version = "0.1.5.dev3"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)(\\.(?P<dev>dev\\d+))?"
serialize = [
    "{major}.{minor}.{patch}.{dev}",
    "{major}.{minor}.{patch}",
]
commit = true
tag = false  # Don't tag dev versions by default
tag_name = "v{new_version}"
message = "Bump to {new_version}"

[tool.bumpversion.parts.dev]
# Dev versions: dev0, dev1, dev2, ... or "" for release
# Empty string ("") = release version (no .devX suffix)
optional_value = ""
first_value = "dev0"
values = ["", "dev0", "dev1", "dev2", "dev3", "dev4", "dev5", "dev6", "dev7", "dev8", "dev9"]

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "backend/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'
